--- a/templates/bconsole.conf
+++ b/templates/bconsole.conf
@@ -6,8 +6,8 @@
 #
 
 Director {
-  Name = 
-  DIRport = 
-  address = 
-  Password = 
+  Name = name
+  DIRport = dirPort
+  address = addRess
+  Password = password
 }
